# documentaai

./: .gitignore  CLAUDE.md  README.md  index.html  package-lock.json  package.json  quick-capture.html  tsconfig.json  vite.config.ts
.claude/commands/: dev.md  new-page.md  setup.md
.github/workflows/: release.yml
src/: App.tsx  QuickCaptureApp.tsx  index.css  main.tsx  quick-capture.tsx
src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json  quick-capture.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/editor/: CanvasEditor.tsx  Editor.tsx  FolderView.tsx  WikiLink.tsx
src/components/layout/: AppShell.tsx
src/components/search/: SearchModal.tsx
src/components/sidebar/: DragContext.tsx  PageItem.tsx  Sidebar.tsx
src/lib/: db.ts  tts.ts
src/store/: pages.store.ts  ui.store.ts
src/types/: index.ts
