[package]
name = "documentaai"
version = "0.2.0"
description = "DocumentaAI - Ferramenta de documentação pessoal"
authors = []
edition = "2021"
rust-version = "1.77.2"

[[bin]]
name = "documentaai"
path = "src/main.rs"

[lib]
name = "documentaai_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
